2006-01-09  Fernando Perez  <Fernando.Perez@colorado.edu>

	* setup_bdist_egg.py: little script to build an egg.  Added
	support in the release tools as well.

2006-01-08  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Shell.py (IPShellWX.__init__): add support for WXPython
	version selection (new -wxversion command line and ipythonrc
	parameter).  Patch contributed by Arnd Baecker
	<arnd.baecker-AT-web.de>.

	* IPython/iplib.py (embed_mainloop): fix tab-completion in
	embedded instances, for variables defined at the interactive
	prompt of the embedded ipython.  Reported by Arnd.

	* IPython/Magic.py (magic_autocall): Fix %autocall magic.  Now
	it can be used as a (stateful) toggle, or with a direct parameter.

	* IPython/ultraTB.py (_fixed_getinnerframes): remove debug assert which
	could be triggered in certain cases and cause the traceback
	printer not to work.

2006-01-07  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/iplib.py (_should_recompile): Small fix, closes
	http://www.scipy.net/roundup/ipython/issue48.  Patch by Scott.

2006-01-04  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Shell.py (IPShellGTK.mainloop): fix bug in the GTK
	backend for matplotlib (100% cpu utiliziation).  Thanks to Charlie
	Moad for help with tracking it down.

	* IPython/iplib.py (handle_auto): fix autocall handling for
	objects which support BOTH __getitem__ and __call__ (so that f [x]
	is left alone, instead of becoming f([x]) automatically).

	* IPython/Magic.py (magic_cd): fix crash when cd -b was used.
	Ville's patch.

2006-01-03  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/iplib.py (handle_auto): changed autocall semantics to
	include 'smart' mode, where the autocall transformation is NOT
	applied if there are no arguments on the line.  This allows you to
	just type 'foo' if foo is a callable to see its internal form,
	instead of having it called with no arguments (typically a