@@ -1,11 +1,19 @@
 #!/usr/bin/env python
-"""Simple wrapper to build IPython as an egg (setuptools format)."""
+"""Wrapper to build IPython as an egg (setuptools format)."""
 
+import os
 import sys
 
-import pkg_resources
-pkg_resources.require("setuptools")
+# Add my local path to sys.path
+home = os.environ['HOME']
+sys.path.insert(0,'%s/usr/local/lib/python%s/site-packages' %
+                (home,sys.version[:3]))
+
+# now, import setuptools and build the actual egg
 import setuptools
 
 sys.argv=['','bdist_egg']
 execfile('setup.py')
+
+# clean up the junk left around by setuptools
+os.system('rm -rf ipython.egg-info')
